--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -3,9 +3,8 @@ services:
     postgres:
         image: postgres
         environment: 
-            - POSTGRES_USER=${POSTGRES_USER}
-            - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+            - POSTGRES_USER=admin
+            - POSTGRES_PASSWORD=admin123
         ports: 
             - "5432:5432"
-        volumes: 
-            - ./init.sql:/docker-entrypoint-initdb.d/docker_postgres_init.sql
+            
