update version and create dockerfile

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         </parent>
         <groupId>com.github.renankuba.pokedexapi</groupId>
         <artifactId>pokedex-api</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
 
         <name>pokedex-api</name>
 
