--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/admin
-spring.datasource.username=admin
-spring.datasource.password=admin123
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/admin
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 
 spring.flyway.baselineVersion=0.0
 spring.flyway.baseline-on-migrate=true
-spring.flyway.url=jdbc:postgresql://localhost:5432/admin
-spring.flyway.user=admin
-spring.flyway.password=admin123
+spring.flyway.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/admin
+spring.flyway.user=${DB_USER}
+spring.flyway.password=${DB_PASS}
